logs/dag_id=sales/run_id=scheduled__2022-06-17T20:11:53.712679+00:00/task_id=create_tables_tasks.criar_Stage_Sales/attempt=1.log
[2022-06-17 17:12:08,382] {taskinstance.py:1160} INFO - Dependencies all met for <TaskInstance: sales.create_tables_tasks.criar_Stage_Sales scheduled__2022-06-17T20:11:53.712679+00:00 [queued]>
[2022-06-17 17:12:08,403] {taskinstance.py:1160} INFO - Dependencies all met for <TaskInstance: sales.create_tables_tasks.criar_Stage_Sales scheduled__2022-06-17T20:11:53.712679+00:00 [queued]>
[2022-06-17 17:12:08,403] {taskinstance.py:1357} INFO - 
--------------------------------------------------------------------------------
[2022-06-17 17:12:08,403] {taskinstance.py:1358} INFO - Starting attempt 1 of 1
[2022-06-17 17:12:08,403] {taskinstance.py:1359} INFO - 
--------------------------------------------------------------------------------
[2022-06-17 17:12:08,428] {taskinstance.py:1378} INFO - Executing <Task(PostgresOperator): create_tables_tasks.criar_Stage_Sales> on 2022-06-17 20:11:53.712679+00:00
[2022-06-17 17:12:08,439] {standard_task_runner.py:52} INFO - Started process 133818 to run task
[2022-06-17 17:12:08,445] {standard_task_runner.py:79} INFO - Running: ['airflow', 'tasks', 'run', 'sales', 'create_tables_tasks.criar_Stage_Sales', 'scheduled__2022-06-17T20:11:53.712679+00:00', '--job-id', '1253', '--raw', '--subdir', 'DAGS_FOLDER/dag copy.py', '--cfg-path', '/tmp/tmppenzohhz', '--error-file', '/tmp/tmpuo0y5_4g']
[2022-06-17 17:12:08,446] {standard_task_runner.py:80} INFO - Job 1253: Subtask create_tables_tasks.criar_Stage_Sales
[2022-06-17 17:12:08,542] {task_command.py:370} INFO - Running <TaskInstance: sales.create_tables_tasks.criar_Stage_Sales scheduled__2022-06-17T20:11:53.712679+00:00 [running]> on host uiliam-Vostro-15-3515
[2022-06-17 17:12:08,665] {taskinstance.py:1570} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=airflow
AIRFLOW_CTX_DAG_ID=sales
AIRFLOW_CTX_TASK_ID=create_tables_tasks.criar_Stage_Sales
AIRFLOW_CTX_EXECUTION_DATE=2022-06-17T20:11:53.712679+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-06-17T20:11:53.712679+00:00
[2022-06-17 17:12:08,692] {base.py:68} INFO - Using connection ID '***_default' for task execution.
[2022-06-17 17:12:08,699] {dbapi.py:213} INFO - Running statement: 
                CREATE TABLE IF NOT EXISTS Stg_Sales (
                quantityordered,
                priceeach,
                buyprice
                )
            , parameters: None
[2022-06-17 17:12:08,701] {taskinstance.py:1890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/airflow/hooks/dbapi.py", line 193, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/uiliam/sandbox/lib/python3.9/site-packages/airflow/hooks/dbapi.py", line 217, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 7:             
                    ^

[2022-06-17 17:12:08,718] {taskinstance.py:1396} INFO - Marking task as FAILED. dag_id=sales, task_id=create_tables_tasks.criar_Stage_Sales, execution_date=20220617T201153, start_date=20220617T201208, end_date=20220617T201208
[2022-06-17 17:12:08,744] {standard_task_runner.py:92} ERROR - Failed to execute job 1253 for task create_tables_tasks.criar_Stage_Sales (syntax error at end of input
LINE 7:             
                    ^
; 133818)
[2022-06-17 17:12:08,777] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-06-17 17:12:08,867] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
